#Se incorpora formulario de conexión, y control de forma de pago. Se revisaron mensajes y validaciones. Se revisa y comenta el código en general

--- a/App.config
+++ b/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="cadenaConexion"
-			 connectionString="server=localhost;database=equipo8_comision_c;user=root;password=toor;SslMode=none;AllowPublicKeyRetrieval=true;"
+			 connectionString="server=localhostx;database=equipo8_comision_c;user=root;password=toor;SslMode=none;AllowPublicKeyRetrieval=true;"
 			 providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 </configuration>
